--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.5",
     "dotenv": "^8.2.0",
+    "mongoose": "^5.11.15",
     "puppeteer": "^7.0.1",
     "telegraf": "^4.0.3",
     "ts-node": "^9.1.1",
