--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -21,7 +21,7 @@ services:
       - "4001:4001"
     volumes:
       - .:/usr/src/app
-      - node_modules:/usr/src/app/node_modules
+      - /usr/src/app/node_modules
     networks:
       - app-network
     command: yarn dev
@@ -42,4 +42,3 @@ networks:
     driver: bridge
 volumes:
   data:
-  node_modules:
